welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:5: error: type mismatch;
 found   : Unit
 required: Boolean
	f=true
         ^lessBy10:8: error: type mismatch;
 found   : Unit
 required: Boolean
	f=true
         ^lessBy10:11: error: type mismatch;
 found   : Unit
 required: Boolean
	f=true
         ^lessBy10:14: error: type mismatch;
 found   : Unit
 required: Boolean
	f=false }
         ^